[package]
name = "scale_signature_http"
version = "0.3.7"
edition = "2021"
description = "The definitions and source for the official Scale HTTP Signature for Scale Functions"
license = "Apache-2.0"
homepage = "https://scale.sh"
repository = "https://github.com/loopholelabs/scale-signature-http"
exclude = [
    "**/*.go",
    "**/*.templ",
    "go.mod",
    "go.sum",
    "*.ts",
    "*.js",
    "*.json",
    "*.proto",
]

[lib]
path = "lib.rs"

[dependencies]
polyglot_rs = "0.6.1"
scale_signature = "0.2.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
